<resources>
    <string name="app_name">Burn-It</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string-array name="target_options">
        <item>Mins</item>
        <item>Hrs</item>
        <item>Km</item>
    </string-array>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCNsLXLUsw06--_eOiSAoicmmipnEb8vLE</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="bmi">BMI</string>
    <string name="your_runs">Your Runs</string>
    <string name="sort_by">Sort by:</string>
    <string name="todo">TODO</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_name">Your Name</string>
    <string name="apply_changes">Update Info</string>
    <string name="string_continue">Continue</string>
    <string name="kg">kg</string>
    <string name="welcome_nplease_enter_your_name_and_weight">Welcome! \nPlease enter your name and weight.</string>
    <string name="rationale">You need to accept location permissions to use this app.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="timer">"00:00:00:00"</string>
    <string name="finish_run">Finish Run</string>
    <string name="let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="today">Today:</string>
    <string name="_10_8">10.8</string>
    <string name="celsius">celsius</string>
    <string name="cloudy">Cloudy</string>
    <string name="put_your_self_to_the_test">PUT YOUR SELF TO THE TEST</string>
    <string name="today_s_target">Today\'s Target</string>
    <string name="_1000">1000</string>
    <string name="mins">mins</string>
    <string name="hrs">hrs</string>
    <string name="set_target">Set Target</string>
    <string name="_10"> e.g 10</string>
    <string name="_2"> e.g 30</string>
    <string name="this_week_target">This Week Target</string>
    <string name="this_month_target">This Month Target</string>
    <string name="_40"> e.g 40</string>
    <string name="clear_data">Clear Data</string>
    <string name="cancel_mesage_stat">"Are you sure, You can't recover this data later"</string>
    <string name="cancel_title_stat">"Clear All Data?"</string>
    <string name="cancel_mesage_track">"Are you sure to cancel the current run and delete all its data?"</string>
    <string name="cancel_title_track">"Cancel the Run?"</string>
    <string name="target_text">Click here to set a target</string>
    <string name="run_text">Click here to start a run</string>
    <string name="all_runs">Your runs will be visible here</string>
    <string name="run_stats">Click here to view your stats</string>
    <string name="settings_text">Click here to modify your profile</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="total_distance">Total Distance</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="total_time">Total Time</string>
    <string name="_0kcal">0kcal</string>
    <string name="average_speed">Average Speed</string>
    <string name="_0km_h">0km/h</string>
    <string name="_0km">0km</string>
    <string name="_00_00_00">00:00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="what_are_you">What are you?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="what_is_your_age">What is your age?</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="what_is_your_body_metrics">What is your body metrics?</string>
    <string name="height">Height:</string>
    <string name="ft">ft</string>
    <string name="ins">ins</string>
    <string name="st">st</string>
    <string name="ibs">Ibs</string>
    <string name="weight">Weight:</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="m">m</string>
    <string name="your_bmi">Your BMI</string>
    <string name="want_to_be_better">Want to be better?</string>
    <string name="what_is_bmi">What is BMI?</string>
    <string name="find_out_your_bmi">Find out your BMI</string>

</resources>