<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_body_metrics"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/baloo"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imperial"
                android:textSize="16sp"
                android:checked="true"
                android:buttonTint="@color/colorPrimary"
                android:fontFamily="@font/baloo"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/metric"
                android:textSize="16sp"
                android:buttonTint="@color/colorPrimary"
                android:fontFamily="@font/baloo"/>
        </RadioGroup>
        <LinearLayout
            android:id="@+id/imperial_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/height"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/baloo"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/height_feet"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:textColor="@color/primaryDark"
                        android:inputType="number"
                        android:background="@drawable/rounded_corners_edit_text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ft"
                        android:textSize="16sp"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/baloo"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/height_inch"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:textColor="@color/primaryDark"
                        android:inputType="number"
                        android:background="@drawable/rounded_corners_edit_text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ins"
                        android:textSize="16sp"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/baloo"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weight"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/baloo"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/weight_pounds"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:textColor="@color/primaryDark"
                        android:inputType="number"
                        android:background="@drawable/rounded_corners_edit_text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/st"
                        android:textSize="16sp"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/baloo"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/weight_oz"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:textColor="@color/primaryDark"
                        android:inputType="number"
                        android:background="@drawable/rounded_corners_edit_text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ibs"
                        android:textSize="16sp"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/baloo"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/metric_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/baloo"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/height_metres"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="@color/primaryDark"
                    android:inputType="number"
                    android:background="@drawable/rounded_corners_edit_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/baloo"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/baloo"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/weight_kg"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="@color/primaryDark"
                    android:inputType="number"
                    android:background="@drawable/rounded_corners_edit_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/baloo"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>