<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.StatisticsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0km"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalDistanceInfo"
        app:layout_constraintEnd_toEndOf="@+id/distancePBar"
        app:layout_constraintStart_toStartOf="@+id/distancePBar"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalDistanceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/total_distance"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/distancePBar"
        app:layout_constraintEnd_toEndOf="@id/tvTotalDistance"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvTotalDistance"
        app:layout_constraintTop_toTopOf="@+id/distancePBar"/>

    <com.jackandphantom.circularprogressbar.CircleProgressbar
        android:id="@+id/distancePBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cpb_roundedCorner="true"
        app:cpb_foregroundProgressWidth="15"
        app:cpb_foregroundProgressColor="@color/colorPrimary"
        app:cpb_backgroundProgressColor="@color/primaryDark"
        app:cpb_touchEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textSize="16sp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalTimeInfo"
        app:layout_constraintEnd_toEndOf="@+id/timePBar"
        app:layout_constraintStart_toStartOf="@id/timePBar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalTimeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/timePBar"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvTotalTime"
        app:layout_constraintTop_toTopOf="@id/timePBar" />

    <com.jackandphantom.circularprogressbar.CircleProgressbar
        android:id="@+id/timePBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cpb_roundedCorner="true"
        app:cpb_foregroundProgressWidth="15"
        app:cpb_foregroundProgressColor="@color/colorPrimary"
        app:cpb_backgroundProgressColor="@color/primaryDark"
        app:cpb_touchEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalCaloriesInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_burned"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/caloriesPBar"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalCalories"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvTotalCalories"
        app:layout_constraintTop_toTopOf="@id/caloriesPBar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0kcal"
        android:textSize="16sp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalCaloriesInfo"
        app:layout_constraintEnd_toEndOf="@+id/caloriesPBar"
        app:layout_constraintStart_toStartOf="@id/caloriesPBar" />

    <com.jackandphantom.circularprogressbar.CircleProgressbar
        android:id="@+id/caloriesPBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cpb_roundedCorner="true"
        app:cpb_foregroundProgressWidth="15"
        app:cpb_foregroundProgressColor="@color/colorPrimary"
        app:cpb_backgroundProgressColor="@color/primaryDark"
        app:cpb_touchEnabled="true"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/timePBar"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAverageSpeedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_speed"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/speedPBar"
        app:layout_constraintEnd_toEndOf="@+id/tvAverageSpeed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvAverageSpeed"
       app:layout_constraintTop_toTopOf="@id/speedPBar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAverageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0km_h"
        android:textSize="16sp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@id/speedPBar"
        app:layout_constraintBottom_toTopOf="@id/tvAverageSpeedInfo"
        app:layout_constraintStart_toStartOf="@+id/speedPBar" />

    <com.jackandphantom.circularprogressbar.CircleProgressbar
        android:id="@+id/speedPBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cpb_roundedCorner="true"
        app:cpb_foregroundProgressWidth="15"
        app:cpb_foregroundProgressColor="@color/colorPrimary"
        app:cpb_backgroundProgressColor="@color/primaryDark"
        app:cpb_touchEnabled="true"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/distancePBar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7017784" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>